--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -26,8 +26,13 @@
 
 /* main style */
 header{
-    background-color: #fff8f3;
+    background-color: #FFF8E3;
+    background: url(../images/developer.png) , url(../images/header_bg.png) , #FFF8E3;
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
     padding-top: 51px;
+
+
 }
 
 nav{
@@ -57,3 +62,46 @@ nav .menu a{
     color: #474747;
     text-decoration: none;
 }
+
+
+#banner{
+    margin: 47px 38px 0 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#banner .banner-content{
+    max-width: 585px;
+}
+
+#banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5px;
+    
+}
+#banner .banner-content h1{
+    font-size: 85px;
+    font-weight: 700;
+    color: #181818;
+    margin-bottom: 20px;
+
+}
+
+#banner .banner-content p{
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+
+#banner .banner-image img{
+    max-width: 585px;
+    vertical-align: middle;
+}
+#banner button{
+    margin-right: 20px;
+}
+
