--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -24,6 +24,24 @@
     cursor: pointer;
 }
 
+.section-heading{
+    max-width: 826px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.section-heading h2{
+    font-size: 35px;
+    margin-bottom: 30px;
+    font-weight: 700;
+}
+.section-heading p{
+    font-size: 18px;
+    margin-bottom: 30px;
+    color: #757575;
+    line-height: 30px;
+}
+
 /* main style */
 header{
     background-color: #FFF8E3;
@@ -105,3 +123,72 @@ nav .menu a{
     margin-right: 20px;
 }
 
+
+#about{
+    padding-top: 130px;
+
+}
+
+#about .about-container{
+    width: 70%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 155px;
+
+}
+
+#about .about-info{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 22px 0;
+}
+#about .about-card p{
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+#about .about-card h4{
+    font-size: 20px;
+    line-height: 30px;
+    color: #474747;
+    font-weight: 700;
+}
+
+#skills{
+    padding-top: 130px;
+}
+
+#skills .skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+#skills .skills-container .skill-box{
+    display: flex;
+    gap: 24px;
+}
+
+.skill-box .skill-card{
+    padding: 30px;
+    max-width: 267px;
+    box-shadow: 0 6px 50px 0 #00000023;
+}
+.skill-card img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h3{
+    font-size: 20px;
+    font-weight: 700;
+    color: #181818;
+    margin-bottom: 20px;
+}
+.skill-card p{
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+
+}
